# cpp-barebone

./: CMakeLists.txt  README.md  run.sh  setup.sh  test.sh
app/src/: main.cpp
app/src/core/: factorial.cpp
test/src/: test.cpp
